# raspberry_pi_home

catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: example.pc  libviso2.pc  vis_pkg.pc
catkin_ws/devel/lib/vis_pkg/: cam_node  test_node  track_node
catkin_ws/devel/share/example/cmake/: exampleConfig.cmake
catkin_ws/devel/share/libviso2/cmake/: libviso2Config.cmake
catkin_ws/devel/share/vis_pkg/cmake/: vis_pkgConfig.cmake
catkin_ws/src/vis_pkg/: CMakeLists.txt
catkin_ws/src/vis_pkg/src/: cam_node.cxx  test_node.cxx  track_node.cxx
picam/: CMakeLists.txt  src.cxx
